[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/info_panel/info_panel.gd" type="Script" id=1]
[ext_resource path="res://fonts/time_and_space/TimeandSpace-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 2 )

[node name="InfoPanel" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -250.5
margin_right = 300.0
margin_bottom = 250.5

[node name="ButtonPrev" type="Button" parent="Panel"]
margin_left = 189.015
margin_top = 447.958
margin_right = 224.015
margin_bottom = 482.958
custom_fonts/font = SubResource( 3 )
text = "<"

[node name="ButtonNext" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -224.874
margin_top = 448.476
margin_right = -189.874
margin_bottom = 483.476
custom_fonts/font = SubResource( 3 )
text = ">"

[node name="ButtonClose" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -66.0
margin_top = -53.0
margin_right = 66.0
margin_bottom = -17.0
custom_fonts/font = SubResource( 3 )
text = "close"

[connection signal="pressed" from="Panel/ButtonPrev" to="." method="_on_button_prev_pressed"]
[connection signal="pressed" from="Panel/ButtonNext" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="Panel/ButtonClose" to="." method="_on_button_close_pressed"]
